--- a/README
+++ b/README
@@ -1,10 +1,28 @@
-= External dependencies = 
-in the root CMakeLists.txt
-configure BOOST_ROOT
+External dependencies
+-----------------
+* googletest
+* boost filesystem
 
-= Build =
+googletest is provided as a git submoudle
+install by
+`git submodule update --init`
+
+Boost is required to be installed seperatly
+1. download latest version from http://www.boost.org/
+2. uncompress with `tar -xzvf`
+3. compile boost executing boostrap.sh and following the instructions 
+4. in the root CMakeLists.txt configure BOOST_ROOT to your boost directory
+
+Compiled with
+------------
+g++ 5.3.1
+
+requires c++14 support
+
+Build
+----- 
 mkdir build
 cd build
 cmake ..
 make
-./main/a.out
+./main/db
